# clinic_agent

./: .env.example  .gitignore  README.md  bootstrap.sh  pyproject.toml
clinic_agent/: __init__.py  main.py
clinic_agent/prompt/: clinic_agent.md  refine_pdf_prompt.md
example/: CHAD_Full.md  CHAD_full_head.md  candidate_drug_evaluation_report.md  clinical_trial_protocol.md  report.md
tests/: test_main.py
