[project]
name = "clinic_agent"
version = "0.3.0"
description = "A langchain based clinic research agent"
authors = [ { name = "Downsea", email = "qiaonancn@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "click",
    "tavily-python",
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "pypdf",
    "uv",
    "pytest"
]

[project.scripts]
clinic_agent = "clinic_agent.main:cli"
