[project]
name = "clinic_agent"
version = "0.3.0"
description = "A langchain based clinic research agent"
authors = [ { name = "Downsea", email = "qiaonancn@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "click",
    "langchain-tavily",
    "langchain",
    "langchain_community",
    "langchain-openai",
    "python-dotenv",
    "PyMuPDF",
    "uv",
    "pytest"
]

[project.scripts]
clinic_agent = "clinic_agent.main:cli"
